--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,7 @@
 {
   "projects": {
-    "modeladopao": "modeladopao"
+    "modeladopao": "modeladopao",
+    "default": "modeladopao"
   },
   "targets": {},
   "etags": {}
