feat: POST craeteProduct solo para admin

--- a/firebase.json
+++ b/firebase.json
@@ -42,6 +42,9 @@
     "hosting": {
       "port": 5000
     },
+    "auth": {
+      "port": 9099
+    },
     "ui": {
       "enabled": true
     },
