--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,14 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fontsource/roboto": "^5.2.6",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^5.18.0",
     "@tailwindcss/vite": "^4.1.12",
-    "firebase": "^12.1.0",
+    "firebase": "^12.2.1",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.12.7",
+    "install": "^0.13.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
