--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,7 +14,9 @@
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
     "firebase": "^12.2.1",
+    "prop-types": "^15.8.1",
     "react": "^19.1.1",
+    "react-csv": "^2.2.2",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@types/react": "^19.1.10",
+    "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.33.0",
