--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
     "clean-install": "rm -rf node_modules package-lock.json && npm install"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
     "firebase": "^12.2.1",
