--- a/Backend/functions/package.json
+++ b/Backend/functions/package.json
@@ -15,6 +15,8 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/cors": "^2.8.19",
+    "cors": "^2.8.5",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1"
   },
